--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello WOrld
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Home</title>
+    <?php include 'includes/head.php'; ?>
+</head>
+<body>
+    <h1>Hello World!!!</h1>
+</body>
+</html>
